--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ description = "zcm = Zenn Contents Manager"
 clap = { version = "4.1.6", features = ["derive"] }
 comrak = "0.16"
 glob = "0.3.1"
+regex = "1.0"
+serde = "1.0"
+serde_yaml = "0.9"
