--- a/.github/workflows/release-zcm.yml
+++ b/.github/workflows/release-zcm.yml
@@ -25,7 +25,7 @@ jobs:
           git config user.email "sek.ohei.w0822@icloud.com"
           git config user.name "gh actions"
           git switch -c release/v0.1
-          git rm -r --cached --ignore-unmatch *
+          git rm -r --cached --ignore-unmatch * .*
           git add articles images zcm
           git commit -m "create release"
           git push origin --force release/v0.1
