--- a/.github/workflows/release-zcm.yml
+++ b/.github/workflows/release-zcm.yml
@@ -9,25 +9,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-
-      - uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release
-
-      - env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          mv target/release/zcm .
-
-          git config user.email "sek.ohei.w0822@icloud.com"
-          git config user.name "gh actions"
-          git switch -c release/v0.1
-          git rm -r --cached --ignore-unmatch "*"
-          git add articles images zcm
-          git commit -m "create release"
-          git push origin --force release/v0.1
+      - run: cargo publish
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
